--- a/package.html
+++ b/package.html
@@ -343,10 +343,45 @@
     <h5 class="text-truncate">Costa Marina</h5>
     <div>
       <i class="fas fa-map-marker-alt mr-2" style="color:#1e3a6d;"></i> 
-      <span>Patricias Argentinas 392</span>
+      <span>Córdoba 80 </span>
     </div>
     <div>
-      <a href="https://www.google.com/maps/place/Caba%C3%B1as+Alas+del+Sol/@-30.919147,-62.678202,15z/data=!4m10!3m9!1s0x94349ad0a4f4e349:0xb1274b254d2d99b7!5m3!1s2025-09-23!4m1!1i2!8m2!3d-30.919147!4d-62.6782016!16s%2Fg%2F11b7q9kl1r?hl=es-US&entry=ttu&g_ep=EgoyMDI1MDkxNi4wIKXMDSoASAFQAw%3D%3D" 
+      <a href="https://www.google.com/maps/place/%22Costa+Marina%22+Caba%C3%B1as+%26+Suites+frente+al+mar/@-30.915574,-62.679231,15z/data=!4m8!3m7!1s0x0:0x4869f7cf74fdb654!5m2!4m1!1i2!8m2!3d-30.9155767!4d-62.6792297?ll=-30.915574,-62.679231&z=15&t=m&hl=es-US&gl=US&mapclient=embed&cid=5217974113678505556&coh=164777&entry=tt&shorturl=1" 
+         style="text-decoration: none; color: rgb(240, 111, 135);">
+        (Ver Ubicación)
+      </a>
+    </div>
+  </div>
+</div>
+ <!-- ITEM 4 -->
+       
+  <div class="text-center pb-4">
+  <img class="img-fluid mx-auto" src="img/el-mistolar-cabanas.jpg.webp" alt="Galería del hotel"
+       style="width:180px; height:180px; border-radius:12px; object-fit:cover; transition:transform .3s ease;" 
+       onmouseover="this.style.transform='scale(1.08)'" 
+       onmouseout="this.style.transform='scale(1)'">
+  <div class="testimonial-text bg-white p-4 mt-n5" style="padding-top:56px;">
+    <br>
+    <!-- ICONOS -->
+    <div style="display:flex; justify-content:center; flex-wrap:wrap; gap:10px 14px; margin:8px auto 12px; max-width:280px;">
+  <span><i class="fas fa-car" style="font-size:20px;color:#1e3a6d;" title="Estacionamiento"></i></span>
+  <span><i class="fas fa-mug-hot" style="font-size:20px;color:#1e3a6d;" title="Desayuno"></i></span>
+  <span><i class="far fa-snowflake" style="font-size:20px;color:#1e3a6d;" title="Aire acondicionado"></i></span>
+  <span><i class="fas fa-wifi" style="font-size:20px;color:#1e3a6d;" title="Wi-Fi"></i></span>
+  <span><i class="fas fa-tv" style="font-size:20px;color:#1e3a6d;" title="TV"></i></span>
+   <span><i class="fas fa-credit-card" style="font-size:20px;color:#1e3a6d;" title="Tarjetas"></i></span>
+ <span><i class="fas fa-paw" style="font-size:20px;color:#e63946;" title="No se admiten mascotas"></i></span>
+  <span><i class="fas fa-swimming-pool" style="font-size:20px;color:#1e3a6d;" title="Pileta"></i></span>
+</div>
+
+
+    <h5 class="text-truncate">El Mistolar</h5>
+    <div>
+      <i class="fas fa-map-marker-alt mr-2" style="color:#1e3a6d;"></i> 
+      <span>Buenos Aires 198  </span>
+    </div>
+    <div>
+      <a href="https://www.google.com/maps/place/Buenos+Aires+198,+X5143AGO+Miramar+de+Ansenuza,+C%C3%B3rdoba/@-30.916863,-62.676538,15z/data=!4m6!3m5!1s0x94349ad0561f98eb:0x7f7fb1208515981!8m2!3d-30.9168626!4d-62.6765377!16s%2Fg%2F11thrq8ch7?hl=es-US&entry=ttu&g_ep=EgoyMDI1MDkxNi4wIKXMDSoASAFQAw%3D%3D" 
          style="text-decoration: none; color: rgb(240, 111, 135);">
         (Ver Ubicación)
       </a>
