--- a/gastronomia.html
+++ b/gastronomia.html
@@ -625,7 +625,7 @@
         <div class="col-lg-4 col-md-6 gastro-item" data-cat="fabrica-pastas">
           <div class="bg-white shadow-sm h-100 gastro-card">
             <img class="gastro-thumb" loading="lazy" decoding="async"
-                 src="img/comida11.jpg" onerror="this.src='img/gastro/placeholder.jpg'"
+                 src="img/pasta marina.webp" onerror="this.src='img/gastro/placeholder.jpg'"
                  alt="Pastas Marina" width="640" height="360">
             <div class="p-4 d-flex flex-column flex-grow-1">
               <h5 class="text-truncate mb-1">Pastas Marina</h5>
