--- a/historia.html
+++ b/historia.html
@@ -169,7 +169,9 @@
           <div class="navbar-nav ml-auto py-0">
             <a href="index.html" class="nav-item nav-link">Inicio</a>
             <a href="about.html" class="nav-item nav-link">Acerca de</a>
+              <a href="historia.html" class="nav-item nav-link active">Historia</a>
             <a href="contact.html" class="nav-item nav-link">Contacto</a>
+           
           </div>
         </div>
       </nav>
