--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="destination-item position-relative overflow-hidden mb-2">
           <img class="img-fluid" src="img/Gran-Hotel-Viena-2021.jpg" alt="Nuestros Museos">
-          <a class="destination-overlay text-white text-decoration-none" href="#">
+          <a class="destination-overlay text-white text-decoration-none" href="museos.html">
             <h5 class="text-white">Nuestros Museos</h5>
           </a>
         </div>
