--- a/gastronomia.html
+++ b/gastronomia.html
@@ -124,7 +124,7 @@
         <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
           <div class="navbar-nav ml-auto py-0">
             <a href="index.html" class="nav-item nav-link">Inicio</a>
-            <a href="service.html" class="nav-item nav-link">Acerca de</a>
+            <a href="about.html" class="nav-item nav-link">Acerca de</a>
             <a href="gastronomia.html" class="nav-item nav-link active">Gastronomía</a>
             <a href="contact.html" class="nav-item nav-link">Contacto</a>
           </div>
