--- a/index.html
+++ b/index.html
@@ -214,47 +214,55 @@
 </div>
 <!-- ======= /Destino ======= -->
 
-   <!-- Feature Start -->
-    <div class="container-fluid pb-5">
-        <div class="container pb-5">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="d-flex mb-4 mb-lg-0">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-primary mr-3" style="height: 100px; width: 100px;">
-                            <i class="fa fa-2x fa-money-check-alt text-white"></i>
-                        </div>
-                        <div class="d-flex flex-column">
-                            <h5 class="">Competitive Pricing</h5>
-                            <p class="m-0">Magna sit magna dolor duo dolor labore rebum amet elitr est diam sea</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="d-flex mb-4 mb-lg-0">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-primary mr-3" style="height: 100px; width: 100px;">
-                            <i class="fa fa-2x fa-award text-white"></i>
-                        </div>
-                        <div class="d-flex flex-column">
-                            <h5 class="">Best Services</h5>
-                            <p class="m-0">Magna sit magna dolor duo dolor labore rebum amet elitr est diam sea</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="d-flex mb-4 mb-lg-0">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-primary mr-3" style="height: 100px; width: 100px;">
-                            <i class="fa fa-2x fa-globe text-white"></i>
-                        </div>
-                        <div class="d-flex flex-column">
-                            <h5 class="">Worldwide Coverage</h5>
-                            <p class="m-0">Magna sit magna dolor duo dolor labore rebum amet elitr est diam sea</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+  <!-- PINK – Guía de Turismo (reemplazo de Feature) -->
+<style>
+  .pink-wrap{ align-items:center; }
+  .pink-badge{
+    height:250px; width:350px; border-radius:90px;
+    background:#fde7f1; display:flex; align-items:center; justify-content:center;
+    box-shadow:0 12px 28px rgba(0,0,0,.08); margin-right:1.25rem;
+  }
+  .pink-badge img{ max-height:92%; max-width:92%; height:auto; width:auto; }
+  .pink-title{ font-weight:800; color:#1e3a6d; margin-bottom:.35rem; }
+  .pink-text{ color:#445066; margin:0 0 .9rem; }
+  @media (max-width: 575.98px){
+    .pink-wrap{ text-align:center; flex-direction:column; }
+    .pink-badge{ margin:0 auto 14px; }
+  }
+</style>
+
+<div class="container-fluid pb-5">
+  <div class="container pb-5">
+    <div class="row justify-content-center">
+      <div class="col-md-10 col-lg-8">
+        <div class="d-flex pink-wrap">
+          <!-- Imagen más grande -->
+          <div class="pink-badge" aria-hidden="true">
+            <img src="img/pink god.png" alt="PINK, guía turística">
+          </div>
+
+          <div>
+            <h5 class="pink-title">PINK — Guía de Turismo</h5>
+            <p class="pink-text">
+              Conoce a <strong>Pink </strong>
+              nuestro guía turistico y asistente virtual, consultale tu duda y con mucho gusto te 
+              respondera<br>               
+            </p>
+
+            <a class="btn btn-primary"
+               href="https://wa.me/5493563numero de pink?text=Hola%20PINK,%20quisiera%20hacer%20una%20consulta"
+               target="_blank" rel="noopener" aria-label="Consultar por WhatsApp a PINK">
+              Consultar aquí
+            </a>
+          </div>
         </div>
+      </div>
     </div>
-    <!-- Feature End -->
+  </div>
+</div>
+<!-- /PINK – Guía de Turismo -->
+
+
 
 <!-- About Start -->
     <div class="container-fluid py-5">
