--- a/hoteles.html
+++ b/hoteles.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <title>Miramar de Ansenuza – Cabañas</title>
+  <title>Miramar de Ansenuza – Hoteles</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
   <!-- Favicon -->
@@ -111,12 +111,12 @@
     <div class="container">
       <div class="hero-wrap d-flex flex-column align-items-center justify-content-center">
         <span class="hero-kicker">Oficina de Turismo</span>
-        <h1 class="hero-title"><span class="hero-accent">Cabañas</span></h1>
+        <h1 class="hero-title"><span class="hero-accent">Hoteles</span></h1>
         <p class="hero-subtitle">Estamos para ayudarte</p>
         <nav aria-label="breadcrumb" class="hero-breadcrumb">
           <ol class="breadcrumb justify-content-center">
             <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Cabañas</li>
+            <li class="breadcrumb-item active" aria-current="page">Hoteles</li>
           </ol>
         </nav>
       </div>
@@ -163,8 +163,8 @@
         <div class="search-wrap">
           <i class="fas fa-search" aria-hidden="true"></i>
           <input id="search-cabanas" class="search-input" type="search"
-                 placeholder="Buscar por nombre de cabaña"
-                 aria-label="Buscar por nombre de cabaña">
+                 placeholder="Buscar por nombre de hotel"
+                 aria-label="Buscar por nombre de hotel">
           <button id="clear-search" class="btn-clear" type="button" aria-label="Limpiar búsqueda">Limpiar</button>
           <span id="search-meta" class="search-meta ml-auto">Mostrando <strong id="count-visible">0</strong> de <strong id="count-total">0</strong></span>
         </div>
@@ -172,95 +172,113 @@
     </div>
 
     <!-- MENSAJE: sin resultados -->
-    <div id="no-results" class="no-results">No se encontraron cabañas que coincidan con la búsqueda.</div>
+    <div id="no-results" class="no-results">No se encontraron campings que coincidan con la búsqueda.</div>
 
     <!-- ITEM: Alas del Sol -->
-    <article class="lodging row no-gutters mb-5" data-name="Alas del Sol">
-      <div class="col-lg-7">
-        <a class="lodging-photo" href="#" aria-label="Ver galería de Alas del Sol">
-          <img src="img/1541597884_alas-del-sol.jpg.webp" class="img-fluid" alt="Cabañas Alas del Sol">
+    <!-- ITEM: Camping Don Osvaldo -->
+<!-- ITEM: Ansenuza Hotel Casino Spa -->
+<!-- ITEM: Ansenuza Hotel Casino Spa -->
+<article class="lodging row no-gutters mb-5" data-name="Ansenuza Hotel Casino Spa">
+  <div class="col-lg-7">
+    <a class="lodging-photo" href="#" aria-label="Ver galería de Ansenuza Hotel Casino Spa">
+      <img src="img/MDT_fk_obra-galeria__1703079284.webp" class="img-fluid" alt="Ansenuza Hotel Casino Spa">
+    </a>
+  </div>
+  <div class="col-lg-5 bg-white p-4 p-md-4 shadow-sm">
+    <h3 class="lodging-title mb-2 js-title">Ansenuza Hotel Casino Spa</h3>
+
+    <ul class="amenities mb-3">
+      <li title="Desayuno"><i class="fas fa-mug-hot"></i></li>
+      <li title="Estacionamiento"><i class="fas fa-car"></i></li>
+      <li title="Aire acondicionado"><i class="far fa-snowflake"></i></li>
+      <li title="Wi-Fi"><i class="fas fa-wifi"></i></li>
+      <li title="TV"><i class="fas fa-tv"></i></li>
+      <li title="Tarjetas de crédito"><i class="fas fa-credit-card"></i></li>
+      <li title="No se admiten mascotas" class="muted"><i class="fas fa-paw"></i></li>
+      <li title="Pileta"><i class="fas fa-swimming-pool"></i></li>
+    </ul>
+
+    <div class="mb-3">
+      <h6 class="mb-1">Dirección:</h6>
+      <p class="mb-0">
+        <i class="fas fa-map-marker-alt text-primary mr-2"></i>
+        Calle Costanera Oeste
+        <a class="ml-1 small link-map" target="_blank"
+           href="https://www.google.com/maps/place/Hotel+Comedor+Marchetti/@-30.914945,-62.678084,15z/data=!4m5!3m4!1s0x0:0x1ea8a57b0d08166a!8m2!3d-30.9149195!4d-62.678102?ll=-30.914945,-62.678084&z=15&t=m&hl=es-US&gl=US&mapclient=embed&cid=2209197565143422570&coh=164777&entry=tt&shorturl=1">
+          (Ver en Google Maps)
         </a>
-      </div>
-      <div class="col-lg-5 bg-white p-4 p-md-4 shadow-sm">
-        <h3 class="lodging-title mb-2 js-title">Alas del Sol</h3>
-        <ul class="amenities mb-3">
-          <li title="Estacionamiento"><i class="fas fa-car"></i></li>
-          <li title="Aire acondicionado"><i class="far fa-snowflake"></i></li>
-          <li title="Wi-Fi"><i class="fas fa-wifi"></i></li>
-          <li title="TV"><i class="fas fa-tv"></i></li>
-          <li title="Piscina"><i class="fas fa-swimming-pool"></i></li>
-          <li title="Parrilla / Asador"><i class="fas fa-fire"></i></li>
-          <li title="No se admiten mascotas" class="muted"><i class="fas fa-paw"></i></li>
-        </ul>
+      </p>
+    </div>
 
-        <div class="mb-3">
-          <h6 class="mb-1">Dirección:</h6>
-          <p class="mb-0">
-            <i class="fas fa-map-marker-alt text-primary mr-2"></i>
-            Patricias Argentinas 392
-            <a class="ml-1 small link-map" target="_blank"
-               href="https://www.google.com/maps?q=Patricias+Argentinas+392,+Miramar+de+Ansenuza">(Ver en Google Maps)</a>
-          </p>
-        </div>
+    <!-- Consultas y Reservas -->
+    <div>
+      <h6 class="mb-2">Consultas y Reservas:</h6>
+      <p class="mb-1">
+        <i class="fas fa-phone-alt text-primary mr-2"></i>
+        <a href="tel:+543563493791">(03563) 493791</a>
+      </p>
+      <p class="mb-1">
+        <i class="fas fa-envelope text-primary mr-2"></i>
+        <a href="mailto:reservas@ansenuzahotelcasino.com.ar">reservas@ansenuzahotelcasino.com.ar</a>
+      </p>
+      <p class="mb-0">
+        <i class="fas fa-globe text-primary mr-2"></i>
+        <a href="https://ansenuzahotelcasino.com.ar/" target="_blank" rel="noopener">ansenuzahotelcasino.com.ar</a>
+      </p>
+    </div>
+  </div>
+</article>
 
-        <div>
-          <h6 class="mb-2">Consultas y Reservas:</h6>
-          <p class="mb-1"><i class="fas fa-phone-alt text-primary mr-2"></i> 3563-414257</p>
-          <p class="mb-1">
-            <i class="fas fa-envelope text-primary mr-2"></i>
-            <a href="mailto:alasdelsol@hotmail.com.ar">alasdelsol@hotmail.com.ar</a>
-          </p>
-          <p class="mb-0">
-            <i class="fas fa-globe text-primary mr-2"></i>
-            <a href="http://www.alasdelsol.com.ar/" target="_blank" rel="noopener">www.alasdelsol.com.ar</a>
-          </p>
-        </div>
-      </div>
-    </article>
 
-    <!-- ITEM: Costa Marina -->
-    <article class="lodging row no-gutters mb-5" data-name="Costa Marina">
-      <div class="col-lg-7">
-        <a class="lodging-photo" href="#" aria-label="Ver galería de Costa Marina">
-          <img src="img/WhatsApp-Image-2024-11-20-at-13.35.02.jpeg.webp" class="img-fluid" alt="Cabañas Costa Marina">
+<!-- ITEM: Hotel Miramar -->
+<!-- ITEM: Hotel Miramar -->
+<article class="lodging row no-gutters mb-5" data-name="Hotel Miramar">
+  <div class="col-lg-7">
+    <a class="lodging-photo" href="#" aria-label="Ver galería de Hotel Miramar">
+      <img src="img/Hotel-miramar.jpg.webp" class="img-fluid" alt="Hotel Miramar">
+    </a>
+  </div>
+  <div class="col-lg-5 bg-white p-4 p-md-4 shadow-sm">
+    <h3 class="lodging-title mb-2 js-title">Hotel Miramar</h3>
+
+    <ul class="amenities mb-3">
+      <li title="Desayuno"><i class="fas fa-mug-hot"></i></li>
+      <li title="Estacionamiento"><i class="fas fa-car"></i></li>
+      <li title="Aire acondicionado"><i class="far fa-snowflake"></i></li>
+      <li title="Wi-Fi"><i class="fas fa-wifi"></i></li>
+      <li title="TV"><i class="fas fa-tv"></i></li>
+      <li title="Tarjetas de crédito"><i class="fas fa-credit-card"></i></li>
+      <li title="No se admiten mascotas" class="muted"><i class="fas fa-paw"></i></li>
+      <li title="Pileta"><i class="fas fa-swimming-pool"></i></li>
+    </ul>
+
+    <div class="mb-3">
+      <h6 class="mb-1">Dirección:</h6>
+      <p class="mb-0">
+        <i class="fas fa-map-marker-alt text-primary mr-2"></i>
+        Buenos Aires 200
+        <a class="ml-1 small link-map" target="_blank"
+           href="https://www.google.com/maps/place/Hotel+Comedor+Marchetti/@-30.914945,-62.678084,15z/data=!4m5!3m4!1s0x0:0x1ea8a57b0d08166a!8m2!3d-30.9149195!4d-62.678102?ll=-30.914945,-62.678084&z=15&t=m&hl=es-US&gl=US&mapclient=embed&cid=2209197565143422570&coh=164777&entry=tt&shorturl=1">
+          (Ver en Google Maps)
         </a>
-      </div>
-      <div class="col-lg-5 bg-white p-4 p-md-4 shadow-sm">
-        <h3 class="lodging-title mb-2 js-title">Costa Marina</h3>
-        <ul class="amenities mb-3">
-          <li title="Estacionamiento"><i class="fas fa-car"></i></li>
-          <li title="Aire acondicionado"><i class="far fa-snowflake"></i></li>
-          <li title="Wi-Fi"><i class="fas fa-wifi"></i></li>
-          <li title="TV"><i class="fas fa-tv"></i></li>
-          <li title="Piscina"><i class="fas fa-swimming-pool"></i></li>
-          <li title="No se admiten mascotas"><i class="fas fa-paw" style="color:#1e3a6d;"></i></li>
-          <li title="Asador / Parrilla"><i class="fas fa-fire"></i></li>
-        </ul>
+      </p>
+    </div>
 
-        <div class="mb-3">
-          <h6 class="mb-1">Dirección:</h6>
-          <p class="mb-0">
-            <i class="fas fa-map-marker-alt text-primary mr-2"></i>
-            Ruta Provincial N°3
-            <a class="ml-1 small link-map" target="_blank"
-               href="https://www.google.com/maps?q=Ruta+Provincial+3,+Miramar+de+Ansenuza">(Ver en Google Maps)</a>
-          </p>
-        </div>
+    <!-- Consultas y Reservas -->
+    <div>
+      <h6 class="mb-2">Consultas y Reservas:</h6>
+      <p class="mb-1">
+        <i class="fas fa-phone-alt text-primary mr-2"></i>
+        <a href="tel:+543563493000">03563-493000</a>
+      </p>
+      <p class="mb-0">
+        <i class="fas fa-globe text-primary mr-2"></i>
+        <a href="https://hotelmiramarcordoba.com.ar/home" target="_blank" rel="noopener">hotelmiramarcordoba.com.ar/home</a>
+      </p>
+    </div>
+  </div>
+</article>
 
-        <div>
-          <h6 class="mb-2">Consultas y Reservas:</h6>
-          <p class="mb-1"><i class="fas fa-phone-alt text-primary mr-2"></i> (03563) 15410005</p>
-          <p class="mb-1">
-            <i class="fas fa-envelope text-primary mr-2"></i>
-            <a href="mailto:cabanaslaquinta@outlook.com.ar">cabanaslaquinta@outlook.com.ar</a>
-          </p>
-          <p class="mb-0">
-            <i class="fab fa-facebook text-primary mr-2"></i>
-            <a href="https://www.facebook.com/cabanaslaquintamiramar/" target="_blank" rel="noopener">/cabanaslaquintamiramar</a>
-          </p>
-        </div>
-      </div>
-    </article>
 
   </section>
 
