--- a/package.html
+++ b/package.html
@@ -86,19 +86,23 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid page-header">
-        <div class="container">
-            <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 400px">
-                <h3 class="display-4 text-white text-uppercase">Alojamientos</h3>
-                <div class="d-inline-flex text-white">            
-                   <a href="index.html" class="m-0 text-uppercase text-white">INICIAR</a>
+    <header class="page-header-ansenuza"
+        style="background-image:url('img/flamencos.jpg'); background-position:center; background-size:cover;">
+  <div class="container">
+    <div class="hero-wrap d-flex flex-column align-items-center justify-content-center">
+      <span class="hero-kicker">Oficina de Turismo</span>
+      <h1 class="hero-title"><span class="hero-accent">Alojamientos</span></h1>
+      <p class="hero-subtitle">Estamos para ayudarte</p>
 
-                    <i class="fa fa-angle-double-right pt-1 px-3"></i>
-                    <p class="m-0 text-uppercase">ALOJAMIENTOS</p>
-                </div>
-            </div>
-        </div>
+      <nav aria-label="breadcrumb" class="hero-breadcrumb">
+        <ol class="breadcrumb justify-content-center">
+          <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Alojamientos</li>
+        </ol>
+      </nav>
     </div>
+  </div>
+</header>
     <!-- Header End -->
 
 
@@ -138,7 +142,7 @@
             <!-- Campings -->
             <div class="col-md-2">
               <div class="mb-3 mb-md-0">
-                <a href="" class="nav-item nav-link active"
+                <a href="campings.html" class="nav-item nav-link active"
                    style="color:black; display:inline-block; transition:transform .18s ease, color .18s ease;"
                    onmouseover="this.style.transform='scale(1.06)'; this.style.color='#6bb8ff';"
                    onmouseout="this.style.transform='none'; this.style.color='black';">
