--- a/package.html
+++ b/package.html
@@ -186,7 +186,7 @@
             <!-- Hoteles -->
             <div class="col-md-2">
               <div class="mb-3 mb-md-0">
-                <a href="" class="nav-item nav-link active"
+                <a href="hoteles.html" class="nav-item nav-link active"
                    style="color:black; display:inline-block; transition:transform .18s ease, color .18s ease;"
                    onmouseover="this.style.transform='scale(1.06)'; this.style.color='#6bb8ff';"
                    onmouseout="this.style.transform='none'; this.style.color='black';">
