--- a/campings.html
+++ b/campings.html
@@ -151,7 +151,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-2"><div class="mb-2"><a href="#" class="nav-item nav-link active">Hoteles</a></div></div>
+            <div class="col-md-2"><div class="mb-2"><a href="hoteles.html" class="nav-item nav-link active">Hoteles</a></div></div>
           </div>
         </div>
       </div>
