--- a/hoteles.html
+++ b/hoteles.html
@@ -133,7 +133,7 @@
           <div class="row text-center">
             <div class="col-md-2"><div class="mb-2"><a href="#" class="nav-item nav-link active">Todos</a></div></div>
             <div class="col-md-2"><div class="mb-2"><a href="cabañas.html" class="nav-item nav-link active">Cabañas</a></div></div>
-            <div class="col-md-2"><div class="mb-2"><a href="#" class="nav-item nav-link active">Campings</a></div></div>
+            <div class="col-md-2"><div class="mb-2"><a href="campings.html" class="nav-item nav-link active">Campings</a></div></div>
             <div class="col-md-2">
               <div class="mb-2" style="position:relative;">
                 <a href="#" class="nav-item nav-link active"
