--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="destination-item position-relative overflow-hidden mb-2">
           <img class="img-fluid" src="img/25289578_1559256707500944_2350661798966849926_n.jpg" alt="Nuestros Eventos">
-          <a class="destination-overlay text-white text-decoration-none" href="#">
+          <a class="destination-overlay text-white text-decoration-none" href="eventos.html">
             <h5 class="text-white">Nuestros Eventos</h5>
           </a>
         </div>
@@ -261,8 +261,6 @@
   </div>
 </div>
 <!-- /PINK – Guía de Turismo -->
-
-
 
 <!-- About Start -->
     <div class="container-fluid py-5">
