--- a/index.html
+++ b/index.html
@@ -555,6 +555,60 @@
   </div>
 </div>
 
+<!-- Botón Pinky -->
+<!-- Botón Pinky -->
+<a href="https://wa.me/5493563409731?text=Hola%20PINK,%20quisiera%20hacer%20una%20consulta"
+   class="pinky-float" target="_blank" 
+   aria-label="Contactar con PINK por WhatsApp"
+   title="Hola soy Pinky, tu asistente virtual">
+  <img src="img/eda83ab2-b9e0-456f-844d-81a7b667e614.jpeg" alt="PINK" class="pink-icon">
+</a>
+
+<style>
+  /* Botón Pinky */
+  .pinky-float {
+    position: fixed;
+    bottom: 20px;   /* bien abajo */
+    right: 20px;    /* bien a la derecha */
+    width: 90px;
+    height: 90px;
+    background: #fff;
+    border-radius: 50%;
+    text-align: center;
+    box-shadow: 2px 2px 8px rgba(0,0,0,.3);
+    z-index: 1001; /* siempre arriba de la flecha */
+    transition: transform .2s ease-in-out;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+  }
+
+  .pinky-float img.pink-icon {
+    width: 75%;
+    height: auto;
+  }
+
+  .pinky-float:hover {
+    transform: scale(1.1);
+    text-decoration: none;
+  }
+
+  /* Flecha Back to Top */
+  .back-to-top {
+    bottom: 120px;  /* movemos la flecha un poco más arriba */
+    right: 40px;    /* la corremos un poco a la izquierda */
+    z-index: 1000;
+  }
+</style>
+
+
+
+
+
+
+
     <!-- Testimonial End -->
    <!-- Footer Start (limpio y en español) -->
 <div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" style="margin-top: 90px;">
