--- a/todos.html
+++ b/todos.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <title>Miramar de Ansenuza – Hoteles</title>
+  <title>Miramar de Ansenuza – Todos</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
   <!-- Favicon -->
@@ -163,8 +163,8 @@
         <div class="search-wrap">
           <i class="fas fa-search" aria-hidden="true"></i>
           <input id="search-cabanas" class="search-input" type="search"
-                 placeholder="Buscar por nombre de hotel"
-                 aria-label="Buscar por nombre de hotel">
+                 placeholder="Buscar por nombre de alojamiento"
+                 aria-label="Buscar por nombre de alojamiento">
           <button id="clear-search" class="btn-clear" type="button" aria-label="Limpiar búsqueda">Limpiar</button>
           <span id="search-meta" class="search-meta ml-auto">Mostrando <strong id="count-visible">0</strong> de <strong id="count-total">0</strong></span>
         </div>
@@ -279,6 +279,166 @@
   </div>
 </article>
 
+<article class="lodging row no-gutters mb-5" data-name="Alas del Sol">
+      <div class="col-lg-7">
+        <a class="lodging-photo" href="#" aria-label="Ver galería de Alas del Sol">
+          <img src="img/1541597884_alas-del-sol.jpg.webp" class="img-fluid" alt="Cabañas Alas del Sol">
+        </a>
+      </div>
+      <div class="col-lg-5 bg-white p-4 p-md-4 shadow-sm">
+        <h3 class="lodging-title mb-2 js-title">Alas del Sol</h3>
+        <ul class="amenities mb-3">
+          <li title="Estacionamiento"><i class="fas fa-car"></i></li>
+          <li title="Aire acondicionado"><i class="far fa-snowflake"></i></li>
+          <li title="Wi-Fi"><i class="fas fa-wifi"></i></li>
+          <li title="TV"><i class="fas fa-tv"></i></li>
+          <li title="Piscina"><i class="fas fa-swimming-pool"></i></li>
+          <li title="Parrilla / Asador"><i class="fas fa-fire"></i></li>
+          <li title="No se admiten mascotas" class="muted"><i class="fas fa-paw"></i></li>
+        </ul>
+
+        <div class="mb-3">
+          <h6 class="mb-1">Dirección:</h6>
+          <p class="mb-0">
+            <i class="fas fa-map-marker-alt text-primary mr-2"></i>
+            Patricias Argentinas 392
+            <a class="ml-1 small link-map" target="_blank"
+               href="https://www.google.com/maps?q=Patricias+Argentinas+392,+Miramar+de+Ansenuza">(Ver en Google Maps)</a>
+          </p>
+        </div>
+
+        <div>
+          <h6 class="mb-2">Consultas y Reservas:</h6>
+          <p class="mb-1"><i class="fas fa-phone-alt text-primary mr-2"></i> 3563-414257</p>
+          <p class="mb-1">
+            <i class="fas fa-envelope text-primary mr-2"></i>
+            <a href="mailto:alasdelsol@hotmail.com.ar">alasdelsol@hotmail.com.ar</a>
+          </p>
+          <p class="mb-0">
+            <i class="fas fa-globe text-primary mr-2"></i>
+            <a href="http://www.alasdelsol.com.ar/" target="_blank" rel="noopener">www.alasdelsol.com.ar</a>
+          </p>
+        </div>
+      </div>
+    </article>
+
+    <!-- ITEM: Costa Marina -->
+    <article class="lodging row no-gutters mb-5" data-name="Costa Marina">
+      <div class="col-lg-7">
+        <a class="lodging-photo" href="#" aria-label="Ver galería de Costa Marina">
+          <img src="img/WhatsApp-Image-2024-11-20-at-13.35.02.jpeg.webp" class="img-fluid" alt="Cabañas Costa Marina">
+        </a>
+      </div>
+      <div class="col-lg-5 bg-white p-4 p-md-4 shadow-sm">
+        <h3 class="lodging-title mb-2 js-title">Costa Marina</h3>
+        <ul class="amenities mb-3">
+          <li title="Estacionamiento"><i class="fas fa-car"></i></li>
+          <li title="Aire acondicionado"><i class="far fa-snowflake"></i></li>
+          <li title="Wi-Fi"><i class="fas fa-wifi"></i></li>
+          <li title="TV"><i class="fas fa-tv"></i></li>
+          <li title="Piscina"><i class="fas fa-swimming-pool"></i></li>
+          <li title="No se admiten mascotas"><i class="fas fa-paw" style="color:#1e3a6d;"></i></li>
+          <li title="Asador / Parrilla"><i class="fas fa-fire"></i></li>
+        </ul>
+
+        <div class="mb-3">
+          <h6 class="mb-1">Dirección:</h6>
+          <p class="mb-0">
+            <i class="fas fa-map-marker-alt text-primary mr-2"></i>
+            Ruta Provincial N°3
+            <a class="ml-1 small link-map" target="_blank"
+               href="https://www.google.com/maps?q=Ruta+Provincial+3,+Miramar+de+Ansenuza">(Ver en Google Maps)</a>
+          </p>
+        </div>
+
+        <div>
+          <h6 class="mb-2">Consultas y Reservas:</h6>
+          <p class="mb-1"><i class="fas fa-phone-alt text-primary mr-2"></i> (03563) 15410005</p>
+          <p class="mb-1">
+            <i class="fas fa-envelope text-primary mr-2"></i>
+            <a href="mailto:cabanaslaquinta@outlook.com.ar">cabanaslaquinta@outlook.com.ar</a>
+          </p>
+          <p class="mb-0">
+            <i class="fab fa-facebook text-primary mr-2"></i>
+            <a href="https://www.facebook.com/cabanaslaquintamiramar/" target="_blank" rel="noopener">/cabanaslaquintamiramar</a>
+          </p>
+        </div>
+      </div>
+    </article>
+
+    <article class="lodging row no-gutters mb-5" data-name="Camping Don Osvaldo">
+  <div class="col-lg-7">
+    <a class="lodging-photo" href="#" aria-label="Ver galería de Camping Don Osvaldo">
+      <img src="img/camping-don-osvaldo.jpg" class="img-fluid" alt="Camping Don Osvaldo">
+    </a>
+  </div>
+  <div class="col-lg-5 bg-white p-4 p-md-4 shadow-sm">
+    <h3 class="lodging-title mb-2 js-title">Camping Don Osvaldo</h3>
+
+    <ul class="amenities mb-3">
+      <li title="No se admiten mascotas" class="muted"><i class="fas fa-paw"></i></li>
+      <li title="Estacionamiento"><i class="fas fa-car"></i></li>
+    </ul>
+
+    <div class="mb-3">
+      <h6 class="mb-1">Dirección:</h6>
+      <p class="mb-0">
+        <i class="fas fa-map-marker-alt text-primary mr-2"></i>
+        1 de Octubre s/n
+        <a class="ml-1 small link-map" target="_blank"
+           href="https://www.google.com/maps/place/Camping+Don+Osvaldo/@-30.924604,-62.682838,15z/data=!4m5!3m4!1s0x0:0x71ab9e631160ed0c!8m2!3d-30.9246044!4d-62.6828381?hl=es-US&coh=164777&entry=tt&shorturl=1">
+           (Ver en Google Maps)
+        </a>
+      </p>
+    </div>
+  </div>
+</article>
+
+    <!-- ITEM: Costa Marina -->
+   <!-- ITEM: Camping Los Sanavirones -->
+<article class="lodging row no-gutters mb-5" data-name="Camping Los Sanavirones">
+  <div class="col-lg-7">
+    <a class="lodging-photo" href="#" aria-label="Ver galería de Camping Los Sanavirones">
+      <img src="img/Screenshot-2023-01-25-at-3.54.44-PM.png" class="img-fluid" alt="Camping Los Sanavirones">
+    </a>
+  </div>
+  <div class="col-lg-5 bg-white p-4 p-md-4 shadow-sm">
+    <h3 class="lodging-title mb-2 js-title">Camping Los Sanavirones</h3>
+
+    <ul class="amenities mb-3">
+      <li title="No se admiten mascotas" class="muted">
+        <i class="fas fa-paw" style="color:#e63946;"></i>
+      </li>
+      <!-- Agregá más íconos si corresponde, siguiendo el patrón:
+      <li title="Estacionamiento"><i class="fas fa-car"></i></li>
+      -->
+    </ul>
+
+    <div class="mb-3">
+      <h6 class="mb-1">Dirección:</h6>
+      <p class="mb-0">
+        <i class="fas fa-map-marker-alt text-primary mr-2"></i>
+        Sanavirones 250
+        <a class="ml-1 small link-map" target="_blank"
+           href="https://www.google.com/maps/place/Camping+Los+Sanavirones/@-30.9039987,-62.6673627,15z/data=!4m8!3m7!1s0x0:0x1b4c619a5521b4dd!5m2!4m1!1i2!8m2!3d-30.9039987!4d-62.6673627?coh=164777&entry=tt&shorturl=1">
+          (Ver en Google Maps)
+        </a>
+      </p>
+    </div>
+
+    <!-- Si luego tenés teléfonos / email / redes, podés agregarlos aquí
+    <div>
+      <h6 class="mb-2">Consultas y Reservas:</h6>
+      <p class="mb-1"><i class="fas fa-phone-alt text-primary mr-2"></i> </p>
+      <p class="mb-1">
+        <i class="fas fa-envelope text-primary mr-2"></i>
+        <a href="mailto:"></a>
+      </p>
+    </div>
+    -->
+  </div>
+</article>
+
 
   </section>
 
@@ -383,7 +543,7 @@
 
       let to = null;
       function applyFilter(){
-        const q = norm($input.value);
+        const q = norm($input.value);   
         let visibles = 0;
         clearHighlights();
 
